# Railway-Manager

./: Cargo.toml  LICENSE  Makefile
db/: prepare.sql
scripts/: test_add_booking.sh  test_get_history.sh  test_get_trains.sh  test_login.sh  test_logout.sh  test_remove_booking.sh  test_search_by_dest.sh  test_search_by_price.sh  test_search_by_train_id.sh  test_sign_up.sh
scripts/json/: add_booking.json  get_history.json  get_trains.json  login.json  logout_2.json  logout_6.json  remove_booking.json  search_by_dest.json  search_by_price.json  search_by_train_id.json  sign_up.json
sql/: insert.sql  prepare.sql
src/: main.rs
src/api/: add_booking.rs  get_history.rs  get_trains.rs  login.rs  logout.rs  mod.rs  remove_booking.rs  search_by_dest.rs  search_by_price.rs  search_by_train_id.rs  sign_up.rs
src/routes/: root.rs
src/types/: mod.rs  search_by_dest_request.rs  search_by_dest_response.rs
src/types/db/: booking.rs  mod.rs  new_user.rs  passwords.rs  route.rs  station.rs  train.rs  train_price.rs  user.rs  user_booking.rs
src/types/req/: add_booking.rs  get_history.rs  login.rs  logout.rs  mod.rs  remove_booking.rs  search_by_dest.rs  search_by_price.rs  search_by_train_id.rs  sign_up.rs
src/types/res/: get_history.rs  login.rs  mod.rs  search_by_dest.rs  search_by_price.rs  search_by_train_id.rs  sign_up.rs
website/: index.html  package-lock.json  package.json
website/src/: App.tsx
website/src/components/: AboutBox.tsx  BookingBox.tsx  ProtectedRoute.tsx  TitlePanel.tsx
website/src/pages/: AboutUs.tsx  BookingPage.tsx  HomePage.tsx  (+6 more)
