[package]
name = "srv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
mysql = "25.0.1"
serde = { version = "1.0.203", features = ["serde_derive"] }
sha2 = "0.10.8"
